--- a/src/app/square/square.component.css
+++ b/src/app/square/square.component.css
@@ -11,7 +11,8 @@
 }
 
 button {
-  font-size: calc(6.5vmin * (2/3));
+  /* font-size: calc(6.5vmin * (2/3)); */
+  font-size: 1.75em;
   text-align: center;
   padding: 0;
   border-width: 1px;
